--- a/Módulo 3 - Usar lógica booleana/Módulo3Katas.ipynb
+++ b/Módulo 3 - Usar lógica booleana/Módulo3Katas.ipynb
@@ -41,13 +41,26 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Cuidado, la velocidad del asteroide es demasiado alta.\n"
+          ]
+        }
+      ],
       "source": [
         "# Añadir el código necesario para crear una variable que guarde la velocidad del asteroide.\n",
         "# Escribe una expresión de prueba para calcular si necesita una advertencia.\n",
-        "# Agregue las instrucciones que se ejecutarán si la expresión de prueba es true o false."
+        "# Agregue las instrucciones que se ejecutarán si la expresión de prueba es true o false.\n",
+        "velocidad = int(input(\"Introduce la velocidad del asteroide: \"))\n",
+        "if velocidad > 25:\n",
+        "    print(\"Cuidado, la velocidad del asteroide es demasiado alta.\")\n",
+        "else:\n",
+        "    print(\"La velocidad del asteroide aun no es demasiado peligrosa.\")"
       ]
     },
     {
@@ -59,13 +72,26 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "El asteroide está a menos de 20 km/s, por lo que no puede ver el rayo de luz.\n"
+          ]
+        }
+      ],
       "source": [
         "# Agrega el código para crear una variable para un asteroide que viaja a 19 km/s\n",
         "# Escribe varias expresiones de prueba para determinar si puedes ver el rayo de luz desde la tierra\n",
-        "# Agrega las instrucciones que se ejecutarán si las expresiones de prueba son True o False"
+        "# Agrega las instrucciones que se ejecutarán si las expresiones de prueba son True o False\n",
+        "velocidad = 19\n",
+        "if velocidad >= 20:\n",
+        "    print(\"El asteroide está a 20 km/s o mas, por lo que puede ver el rayo de luz.\")\n",
+        "else:\n",
+        "    print(\"El asteroide está a menos de 20 km/s, por lo que no puede ver el rayo de luz.\")"
       ]
     },
     {
@@ -99,13 +125,32 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 10,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "El asteroide es demasiado grande y su velocidad es demasiado alta\n"
+          ]
+        }
+      ],
       "source": [
         "# Agrega el código para crear nuevas variables para la velocidad y el tamaño del asteroide\n",
         "# Para probar el código, prueba con varias velocidades y tamaños\n",
-        "# Escribe varias expresiones de prueba o combinaciones de expresiones de prueba para determinar qué mensaje se debe enviar a Tierra."
+        "# Escribe varias expresiones de prueba o combinaciones de expresiones de prueba para determinar qué mensaje se debe enviar a Tierra.\n",
+        "tam = int(input(\"Introduce el tamaño del asteroide: \"))\n",
+        "velocidad = int(input(\"Introduce la velocidad del asteroide: \"))\n",
+        "\n",
+        "if tam >= 25 and velocidad > 25:\n",
+        "    print(\"El asteroide es demasiado grande y su velocidad es demasiado alta\")\n",
+        "elif velocidad >= 20:\n",
+        "    print(\"El asteroide está a 20 km/s o mas, por lo que puede ver el rayo de luz.\")\n",
+        "elif tam < 25:\n",
+        "    print(\"El asteroide es demasiado pequeño por lo que se quemara.\")\n",
+        "else:\n",
+        "    print(\"El asteroide está a menos de 20 km/s, por lo que no puede ver el rayo de luz.\")"
       ]
     },
     {
@@ -174,9 +219,17 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Look up! ¡Hay una luz mágica en el cielo!\n"
+          ]
+        }
+      ],
       "source": [
         "# Agrega el código para crear nuevas variables para la velocidad y el tamaño del asteroide\n",
         "# Para probar el código, prueba con varias velocidades y tamaños\n",
@@ -231,7 +284,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.8.10"
+      "version": "3.10.2"
     },
     "nteract": {
       "version": "nteract-front-end@1.0.0"
