--- a/Módulo 9 - Funciones/Módulo9Katas.ipynb
+++ b/Módulo 9 - Funciones/Módulo9Katas.ipynb
@@ -29,11 +29,17 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 41,
       "metadata": {},
       "outputs": [],
       "source": [
-        "# Función para leer 3 tanques de combustible y muestre el promedio\n"
+        "# Función para leer 3 tanques de combustible y muestre el promedio\n",
+        "def reporte(tanque1, tanque2, tanque3):\n",
+        "    promedio = (tanque1 + tanque2 + tanque3) / 3\n",
+        "    return f\"\"\"El promedio de combustible es: {promedio}\n",
+        "    Tanque 1: {tanque1}\n",
+        "    Tanque 2: {tanque2}\n",
+        "    Tanque 3: {tanque3}\"\"\""
       ]
     },
     {
@@ -45,12 +51,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 42,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "El promedio de combustible es: 20.0\n",
+            "    Tanque 1: 10\n",
+            "    Tanque 2: 20\n",
+            "    Tanque 3: 30\n"
+          ]
+        }
+      ],
       "source": [
         "\n",
-        "# Llamamos a la función que genera el reporte print(funcion(tanque1, tanque2, tanque3))"
+        "# Llamamos a la función que genera el reporte print(funcion(tanque1, tanque2, tanque3))\n",
+        "print(reporte(10, 20, 30))"
       ]
     },
     {
@@ -62,11 +80,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 43,
       "metadata": {},
       "outputs": [],
       "source": [
-        "# Función promedio "
+        "# Función promedio \n",
+        "def calcular_promedio(tanque1, tanque2, tanque3):\n",
+        "    promedio = (tanque1 + tanque2 + tanque3) / 3\n",
+        "    return promedio"
       ]
     },
     {
@@ -78,11 +99,30 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 44,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "El promedio de combustible es: 20.0\n",
+            "    Tanque 1: 10\n",
+            "    Tanque 2: 20\n",
+            "    Tanque 3: 30\n"
+          ]
+        }
+      ],
       "source": [
-        "# Actualiza la función"
+        "# Actualiza la función\n",
+        "def reporte(tanque1, tanque2, tanque3):\n",
+        "    promedio = calcular_promedio(tanque1, tanque2, tanque3)\n",
+        "    return f\"\"\"El promedio de combustible es: {promedio}\n",
+        "    Tanque 1: {tanque1}\n",
+        "    Tanque 2: {tanque2}\n",
+        "    Tanque 3: {tanque3}\"\"\"\n",
+        "    \n",
+        "print(reporte(10, 20, 30))"
       ]
     },
     {
@@ -109,11 +149,38 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 50,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "    Hora de prelanzamiento: 10\n",
+            "    Tiempo de vuelo: 20\n",
+            "    Destino: Marte\n",
+            "    Tanque externo: 10\n",
+            "    Tanque interno: 20\n",
+            "    Tiempo total: 0 horas y 30 minutos\n"
+          ]
+        }
+      ],
       "source": [
-        "# Función con un informe preciso de la misión. Considera hora de prelanzamiento, tiempo de vuelo, destino, tanque externo y tanque interno"
+        "# Función con un informe preciso de la misión. Considera hora de prelanzamiento, tiempo de vuelo, destino, tanque externo y tanque interno\n",
+        "def informe_mision(hora_prelanzamiento, tiempo_vuelo, destino, tanque_externo, tanque_interno):\n",
+        "    tiempo_total = hora_prelanzamiento + tiempo_vuelo\n",
+        "    tiempo_total_horas = tiempo_total // 60\n",
+        "    tiempo_total_minutos = tiempo_total % 60\n",
+        "    return f\"\"\"\n",
+        "    Hora de prelanzamiento: {hora_prelanzamiento}\n",
+        "    Tiempo de vuelo: {tiempo_vuelo}\n",
+        "    Destino: {destino}\n",
+        "    Tanque externo: {tanque_externo}\n",
+        "    Tanque interno: {tanque_interno}\n",
+        "    Tiempo total: {tiempo_total_horas} horas y {tiempo_total_minutos} minutos\"\"\"\n",
+        "\n",
+        "print(informe_mision(10, 20, \"Marte\", 10, 20))"
       ]
     },
     {
@@ -125,11 +192,29 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 97,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "Destino: Marte\n",
+            "Tiempo total en minutos: 30\n",
+            "Combustible total : 30\n"
+          ]
+        }
+      ],
       "source": [
-        "# Escribe tu nueva función de reporte considerando lo anterior"
+        "# Escribe tu nueva función de reporte considerando lo anterior\n",
+        "def reporte(destino, *minutes,**fuel_reservoirs):\n",
+        "    return f\"\"\"\n",
+        "Destino: {destino}\n",
+        "Tiempo total en minutos: {sum(minutes)}\n",
+        "Combustible total : {sum(fuel_reservoirs.values())}\"\"\"\n",
+        "\n",
+        "print(reporte(\"Marte\", 10, 20, tanque_externo=10, tanque_interno=20))\n"
       ]
     },
     {
@@ -141,11 +226,34 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 96,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "Destino: Marte\n",
+            "Tiempo total en minutos: 30\n",
+            "Combustible total : 30\n",
+            "tanque_externo: 10 litros\n",
+            "tanque_interno: 20 litros\n"
+          ]
+        }
+      ],
       "source": [
-        "# Escribe tu nueva función"
+        "# Escribe tu nueva función\n",
+        "def reporte(destino, *minutes, **fuel_reservoirs):\n",
+        "    ans = f\"\"\"\n",
+        "Destino: {destino}\n",
+        "Tiempo total en minutos: {sum(minutes)}\n",
+        "Combustible total : {sum(fuel_reservoirs.values())}\"\"\"\n",
+        "    for tanque, litros in fuel_reservoirs.items():\n",
+        "        ans += f\"\\n{tanque}: {litros} litros\"\n",
+        "    return ans\n",
+        "\n",
+        "print(reporte(\"Marte\", 10, 20, tanque_externo=10, tanque_interno=20))\n"
       ]
     },
     {
@@ -208,9 +316,22 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 95,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "ename": "NameError",
+          "evalue": "name 'average' is not defined",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[1;32mc:\\Users\\luisi\\Documents\\Progra\\CursoIntroPython\\Módulo 9 - Funciones\\Módulo9Katas.ipynb Cell 24'\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/luisi/Documents/Progra/CursoIntroPython/M%C3%B3dulo%209%20-%20Funciones/M%C3%B3dulo9Katas.ipynb#ch0000023?line=2'>3</a>\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mf\u001b[39m\u001b[39m\"\"\"\u001b[39m\u001b[39mFuel Report:\u001b[39m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/luisi/Documents/Progra/CursoIntroPython/M%C3%B3dulo%209%20-%20Funciones/M%C3%B3dulo9Katas.ipynb#ch0000023?line=3'>4</a>\u001b[0m \u001b[39m    Total Average: \u001b[39m\u001b[39m{\u001b[39;00maverage([main_tank, external_tank, hydrogen_tank])\u001b[39m}\u001b[39;00m\u001b[39m%\u001b[39m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/luisi/Documents/Progra/CursoIntroPython/M%C3%B3dulo%209%20-%20Funciones/M%C3%B3dulo9Katas.ipynb#ch0000023?line=4'>5</a>\u001b[0m \u001b[39m    Main tank: \u001b[39m\u001b[39m{\u001b[39;00mmain_tank\u001b[39m}\u001b[39;00m\u001b[39m%\u001b[39m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/luisi/Documents/Progra/CursoIntroPython/M%C3%B3dulo%209%20-%20Funciones/M%C3%B3dulo9Katas.ipynb#ch0000023?line=5'>6</a>\u001b[0m \u001b[39m    External tank: \u001b[39m\u001b[39m{\u001b[39;00mexternal_tank\u001b[39m}\u001b[39;00m\u001b[39m%\u001b[39m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/luisi/Documents/Progra/CursoIntroPython/M%C3%B3dulo%209%20-%20Funciones/M%C3%B3dulo9Katas.ipynb#ch0000023?line=6'>7</a>\u001b[0m \u001b[39m    Hydrogen tank: \u001b[39m\u001b[39m{\u001b[39;00mhydrogen_tank\u001b[39m}\u001b[39;00m\u001b[39m% \u001b[39m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/luisi/Documents/Progra/CursoIntroPython/M%C3%B3dulo%209%20-%20Funciones/M%C3%B3dulo9Katas.ipynb#ch0000023?line=7'>8</a>\u001b[0m \u001b[39m    \u001b[39m\u001b[39m\"\"\"\u001b[39m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/luisi/Documents/Progra/CursoIntroPython/M%C3%B3dulo%209%20-%20Funciones/M%C3%B3dulo9Katas.ipynb#ch0000023?line=9'>10</a>\u001b[0m \u001b[39m# Call the updated function again with different values\u001b[39;00m\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/luisi/Documents/Progra/CursoIntroPython/M%C3%B3dulo%209%20-%20Funciones/M%C3%B3dulo9Katas.ipynb#ch0000023?line=10'>11</a>\u001b[0m \u001b[39mprint\u001b[39m(generate_report(\u001b[39m88\u001b[39;49m, \u001b[39m76\u001b[39;49m, \u001b[39m70\u001b[39;49m))\n",
+            "\u001b[1;32mc:\\Users\\luisi\\Documents\\Progra\\CursoIntroPython\\Módulo 9 - Funciones\\Módulo9Katas.ipynb Cell 24'\u001b[0m in \u001b[0;36mgenerate_report\u001b[1;34m(main_tank, external_tank, hydrogen_tank)\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/luisi/Documents/Progra/CursoIntroPython/M%C3%B3dulo%209%20-%20Funciones/M%C3%B3dulo9Katas.ipynb#ch0000023?line=1'>2</a>\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mgenerate_report\u001b[39m(main_tank, external_tank, hydrogen_tank):\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/luisi/Documents/Progra/CursoIntroPython/M%C3%B3dulo%209%20-%20Funciones/M%C3%B3dulo9Katas.ipynb#ch0000023?line=2'>3</a>\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mf\u001b[39m\u001b[39m\"\"\"\u001b[39m\u001b[39mFuel Report:\u001b[39m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/luisi/Documents/Progra/CursoIntroPython/M%C3%B3dulo%209%20-%20Funciones/M%C3%B3dulo9Katas.ipynb#ch0000023?line=3'>4</a>\u001b[0m \u001b[39m    Total Average: \u001b[39m\u001b[39m{\u001b[39;00maverage([main_tank, external_tank, hydrogen_tank])\u001b[39m}\u001b[39;00m\u001b[39m%\u001b[39m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/luisi/Documents/Progra/CursoIntroPython/M%C3%B3dulo%209%20-%20Funciones/M%C3%B3dulo9Katas.ipynb#ch0000023?line=4'>5</a>\u001b[0m \u001b[39m    Main tank: \u001b[39m\u001b[39m{\u001b[39;00mmain_tank\u001b[39m}\u001b[39;00m\u001b[39m%\u001b[39m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/luisi/Documents/Progra/CursoIntroPython/M%C3%B3dulo%209%20-%20Funciones/M%C3%B3dulo9Katas.ipynb#ch0000023?line=5'>6</a>\u001b[0m \u001b[39m    External tank: \u001b[39m\u001b[39m{\u001b[39;00mexternal_tank\u001b[39m}\u001b[39;00m\u001b[39m%\u001b[39m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/luisi/Documents/Progra/CursoIntroPython/M%C3%B3dulo%209%20-%20Funciones/M%C3%B3dulo9Katas.ipynb#ch0000023?line=6'>7</a>\u001b[0m \u001b[39m    Hydrogen tank: \u001b[39m\u001b[39m{\u001b[39;00mhydrogen_tank\u001b[39m}\u001b[39;00m\u001b[39m% \u001b[39m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/luisi/Documents/Progra/CursoIntroPython/M%C3%B3dulo%209%20-%20Funciones/M%C3%B3dulo9Katas.ipynb#ch0000023?line=7'>8</a>\u001b[0m \u001b[39m    \u001b[39m\u001b[39m\"\"\"\u001b[39m\n",
+            "\u001b[1;31mNameError\u001b[0m: name 'average' is not defined"
+          ]
+        }
+      ],
       "source": [
         "# Actualiza la función\n",
         "def generate_report(main_tank, external_tank, hydrogen_tank):\n",
@@ -234,9 +355,21 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 51,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "    Mission to Moon\n",
+            "    Total travel time: 65 minutes\n",
+            "    Total fuel left: 500000 gallons\n",
+            "    \n"
+          ]
+        }
+      ],
       "source": [
         "# Función con un informe preciso de la misión. Considera hora de prelanzamiento, tiempo de vuelo, destino, tanque externo y tanque interno\n",
         "\n",
@@ -252,9 +385,21 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 57,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "    Mission to Moon\n",
+            "    Total travel time: 76 minutes\n",
+            "    Total fuel left: 500000\n",
+            "    \n"
+          ]
+        }
+      ],
       "source": [
         "# Escribe tu nueva función de reporte considerando lo anterior\n",
         "\n",
@@ -270,9 +415,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 60,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "    Mission to Moon\n",
+            "    Total travel time: 74 minutes\n",
+            "    Total fuel left: 500000\n",
+            "    main tank --> 300000 gallons left\n",
+            "external tank --> 200000 gallons left\n",
+            "\n"
+          ]
+        }
+      ],
       "source": [
         "# Escribe tu nueva función\n",
         "\n",
@@ -324,7 +483,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.8.10"
+      "version": "3.10.2"
     },
     "nteract": {
       "version": "nteract-front-end@1.0.0"
