--- a/Módulo 1 - Primeros pasos/Modulo1 - Primeros pasos.ipynb
+++ b/Módulo 1 - Primeros pasos/Modulo1 - Primeros pasos.ipynb
@@ -95,11 +95,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6\n"
+     ]
+    }
+   ],
    "source": [
-    "# Tu turno, prueba el fragmento de código anterior\n"
+    "# Tu turno, prueba el fragmento de código anterior\n",
+    "sum = 1 + 2\n",
+    "product = sum * 2\n",
+    "print(product)"
    ]
   },
   {
@@ -242,14 +253,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2022-01-31\n"
+      "2022-02-13\n"
      ]
     }
    ],
@@ -297,11 +308,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Today's date is: 2022-02-13\n"
+     ]
+    }
+   ],
    "source": [
-    "# Tu turno ejecuta el siguiente comando: print(\"Today's date is: \" + str(date.today()))"
+    "# Tu turno ejecuta el siguiente comando: print(\"Today's date is: \" + str(date.today()))\n",
+    "print(\"Today's date is: \" + str(date.today()))"
    ]
   },
   {
@@ -326,11 +346,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Bienvenido al programa de bienvenida\n",
+      "Hola Luis!\n"
+     ]
+    }
+   ],
    "source": [
-    "# Escribe tu código aquí"
+    "# Escribe tu código aquí\n",
+    "print(\"Bienvenido al programa de bienvenida\")\n",
+    "name = input(\"¿Cómo te llamas? \")\n",
+    "print(\"Hola \" + name + \"!\")"
    ]
   },
   {
@@ -359,11 +391,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Calculadora\n",
+      "La suma es: 11\n"
+     ]
+    }
+   ],
    "source": [
-    "# Escribe tu código aquí"
+    "# Escribe tu código aquí\n",
+    "print(\"Calculadora\")\n",
+    "num1 = input(\"Introduce el primer número: \")\n",
+    "num2 = input(\"Introduce el segundo número: \")\n",
+    "print(\"La suma es: \" + str(num1 + num2))"
    ]
   },
   {
@@ -388,11 +433,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Calculadora\n",
+      "La suma es: 13\n"
+     ]
+    }
+   ],
    "source": [
-    "# Escribe tu código aquí"
+    "# Escribe tu código aquí\n",
+    "print(\"Calculadora\")\n",
+    "num1 = int(input(\"Introduce el primer número: \"))\n",
+    "num2 = int(input(\"Introduce el segundo número: \"))\n",
+    "print(\"La suma es: \" + str(num1 + num2))"
    ]
   },
   {
@@ -436,7 +494,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.5"
+   "version": "3.10.2"
   },
   "orig_nbformat": 4
  },
