--- a/Módulo 4 - Cadenas/Módulo4Katas.ipynb
+++ b/Módulo 4 - Cadenas/Módulo4Katas.ipynb
@@ -20,7 +20,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -37,11 +37,12 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {},
       "outputs": [],
       "source": [
-        "# Añade el código necesario"
+        "# Añade el código necesario\n",
+        "oraciones = text.split(\".\")"
       ]
     },
     {
@@ -53,11 +54,12 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "metadata": {},
       "outputs": [],
       "source": [
-        "# Define las palabras pista: average, temperature y distance suenan bien"
+        "# Define las palabras pista: average, temperature y distance suenan bien\n",
+        "key_words = [\"average\", \"temperature\", \"distance\"]"
       ]
     },
     {
@@ -69,11 +71,25 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            " \n",
+            "On average, the Moon moves 4cm away from the Earth every year\n",
+            " The highest daylight temperature of the Moon is 127 C\n"
+          ]
+        }
+      ],
       "source": [
-        "# Ciclo for para recorrer la cadena"
+        "# Ciclo for para recorrer la cadena\n",
+        "for oracion in oraciones:\n",
+        "    for key_word in key_words:\n",
+        "        if key_word in oracion:\n",
+        "            print(oracion)"
       ]
     },
     {
@@ -85,11 +101,27 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 9,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            " \n",
+            "On average, the Moon moves 4cm away from the Earth every year\n",
+            " The highest daylight temperature of the Moon is 127 Celsius\n"
+          ]
+        }
+      ],
       "source": [
-        "# Ciclo para cambiar C a Celsius"
+        "# Ciclo para cambiar C a Celsius\n",
+        "for oracion in oraciones:\n",
+        "    for key_word in key_words:\n",
+        "        if key_word in oracion:\n",
+        "            if \"C\" in oracion:\n",
+        "                oracion = oracion.replace(\"C\", \"Celsius\")\n",
+        "            print(oracion)"
       ]
     },
     {
@@ -121,7 +153,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 10,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -140,11 +172,12 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 20,
       "metadata": {},
       "outputs": [],
       "source": [
-        "# Creamos el título"
+        "# Creamos el título\n",
+        "titulo = f\"Datos sobre {name}\""
       ]
     },
     {
@@ -156,11 +189,15 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 24,
       "metadata": {},
       "outputs": [],
       "source": [
-        "# Creamos la plantilla"
+        "# Creamos la plantilla\n",
+        "platilla = f\"\"\"{\"-\" * 90}\n",
+        "Nombre: {name}\n",
+        "Gravedad en {name}: {gravity * 1000} m/s^2\n",
+        "\"\"\""
       ]
     },
     {
@@ -172,11 +209,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 25,
       "metadata": {},
       "outputs": [],
       "source": [
-        "# Unión de ambas cadenas"
+        "# Unión de ambas cadenas\n",
+        "union = f\"\"\"{titulo}\n",
+        "{platilla}\n",
+        "\"\"\""
       ]
     },
     {
@@ -195,12 +235,26 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 26,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Datos sobre Moon\n",
+            "------------------------------------------------------------------------------------------\n",
+            "Nombre: Moon\n",
+            "Gravedad en Moon: 1.6199999999999999 m/s^2\n",
+            "\n",
+            "\n"
+          ]
+        }
+      ],
       "source": [
         "# Comprueba la plantilla\n",
-        "# print(nombre_plantilla)"
+        "# print(nombre_plantilla)\n",
+        "print(union)"
       ]
     },
     {
@@ -212,11 +266,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 27,
       "metadata": {},
       "outputs": [],
       "source": [
-        "# Nueva plantilla"
+        "# Nueva plantilla\n",
+        "name = 'Ganímedes'\n",
+        "gravity  = 0.00143\n",
+        "planet = 'Marte'\n"
       ]
     },
     {
@@ -228,11 +285,29 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 29,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Datos sobre Ganímedes\n",
+            "------------------------------------------------------------------------------------------\n",
+            "Nombre: Ganímedes\n",
+            "Gravedad en Ganímedes: 1.4300000000000002 m/s^2\n",
+            "\n"
+          ]
+        }
+      ],
       "source": [
-        "# Pista: print(nueva_plantilla.format(variables))"
+        "# Pista: print(nueva_plantilla.format(variables))\n",
+        "nueva_plantilla = f\"\"\"Datos sobre {name}\n",
+        "{\"-\" * 90}\n",
+        "Nombre: {name}\n",
+        "Gravedad en {name}: {gravity * 1000} m/s^2\n",
+        "\"\"\"\n",
+        "print(nueva_plantilla)"
       ]
     },
     {
@@ -438,7 +513,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.9.5"
+      "version": "3.10.2"
     },
     "nteract": {
       "version": "nteract-front-end@1.0.0"
