--- a/Módulo 5 - Usar operaciones matemáticas/Módulo5Katas.ipynb
+++ b/Módulo 5 - Usar operaciones matemáticas/Módulo5Katas.ipynb
@@ -24,12 +24,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {},
       "outputs": [],
       "source": [
         "# Crear variables para almacenar las dos distancias\n",
-        "# ¡Asegúrate de quitar las comas!"
+        "# ¡Asegúrate de quitar las comas!\n",
+        "Tierra= 149597870\n",
+        "Jupiter= 778547200"
       ]
     },
     {
@@ -43,11 +45,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 7,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "628949330\n",
+            "390577534\n"
+          ]
+        }
+      ],
       "source": [
-        "# Calcular la distancia entre planetas"
+        "# Calcular la distancia entre planetas\n",
+        "Tierra_Jupiter = (Jupiter - Tierra)\n",
+        "Tierra_Jupiter_Miles = Tierra_Jupiter * 0.621\n",
+        "print(Tierra_Jupiter)\n",
+        "print(round(Tierra_Jupiter_Miles))\n"
       ]
     },
     {
@@ -90,12 +105,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 8,
       "metadata": {},
       "outputs": [],
       "source": [
         "# Almacenar las entradas del usuario\n",
-        "#Pista: variable = input(\"¿Cuál es tu nombre?\")"
+        "#Pista: variable = input(\"¿Cuál es tu nombre?\")\n",
+        "planeta1 = input(\"Cual es la distancia al sol del planeta 1 en KM?\")\n",
+        "planeta2 = input(\"Cual es la distancia al sol del planeta 2 en KM?\")"
       ]
     },
     {
@@ -108,11 +125,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 9,
       "metadata": {},
       "outputs": [],
       "source": [
-        "# Convierte las cadenas de ambos planetas a números enteros"
+        "# Convierte las cadenas de ambos planetas a números enteros\n",
+        "planeta1 = int(planeta1)\n",
+        "planeta2 = int(planeta2)"
       ]
     },
     {
@@ -126,14 +145,26 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 11,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "La distancia entre los planetas es de: 0.621 millas\n",
+            "La distancia entre los planetas es de: 1 KM\n"
+          ]
+        }
+      ],
       "source": [
         "# Realizar el cálculo y determinar el valor absoluto\n",
+        "distancia_km = abs(planeta1 - planeta2)\n",
+        "# Convertir de KM a Millas\n",
+        "distancia_mi= distancia_km * 0.621\n",
         "\n",
-        "\n",
-        "# Convertir de KM a Millas"
+        "print(\"La distancia entre los planetas es de:\", distancia_mi, \"millas\")\n",
+        "print(\"La distancia entre los planetas es de:\", distancia_km, \"KM\")"
       ]
     },
     {
@@ -280,7 +311,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.9.7"
+      "version": "3.10.2"
     },
     "nteract": {
       "version": "nteract-front-end@1.0.0"
