--- a/Módulo 6 - Introducción a las listas/Módulo6Katas.ipynb
+++ b/Módulo 6 - Introducción a las listas/Módulo6Katas.ipynb
@@ -27,11 +27,21 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 14,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "8\n"
+          ]
+        }
+      ],
       "source": [
-        "# Creamos la lista planets y la mostramos"
+        "# Creamos la lista planets y la mostramos\n",
+        "planets = ['Mercury', 'Venus', 'Earth', 'Mars', 'Jupiter', 'Saturn', 'Uranus', 'Neptune']\n",
+        "print(len(planets))"
       ]
     },
     {
@@ -43,11 +53,21 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 15,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "El último planeta es Pluto y la lista tiene 9 elementos\n"
+          ]
+        }
+      ],
       "source": [
-        "# Agregamos a plutón y mostramos el último elemento"
+        "# Agregamos a plutón y mostramos el último elemento\n",
+        "planets.append('Pluto')\n",
+        "print(f\"El último planeta es {planets[-1]} y la lista tiene {len(planets)} elementos\")"
       ]
     },
     {
@@ -96,11 +116,12 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 16,
       "metadata": {},
       "outputs": [],
       "source": [
-        "# Solicitamos el nombre de un planeta *Pista:  input()*"
+        "# Solicitamos el nombre de un planeta *Pista:  input()*\n",
+        "name = input(\"¿Cual es el nombre del planeta que quieres buscar? \")"
       ]
     },
     {
@@ -113,11 +134,12 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 19,
       "metadata": {},
       "outputs": [],
       "source": [
-        "# Busca el planeta en la lista"
+        "# Busca el planeta en la lista\n",
+        "posi = planets.index(name)"
       ]
     },
     {
@@ -131,11 +153,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 21,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "El planeta Venus está en la posición 1 y los planetas más cercanos al sol son:['Mercury']\n"
+          ]
+        }
+      ],
       "source": [
-        "# Muestra los planetas más cercanos al sol"
+        "# Muestra los planetas más cercanos al sol\n",
+        "print(f\"El planeta {name} está en la posición {posi} y los planetas más cercanos al sol son:{planets[0:posi]}\")"
       ]
     },
     {
@@ -149,11 +180,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 22,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Los planetas más lejanos al sol son:['Earth', 'Mars', 'Jupiter', 'Saturn', 'Uranus', 'Neptune', 'Pluto']\n"
+          ]
+        }
+      ],
       "source": [
-        "# Muestra los planetas más lejanos al sol"
+        "# Muestra los planetas más lejanos al sol\n",
+        "print(f\"Los planetas más lejanos al sol son:{planets[posi+1:]}\")"
       ]
     },
     {
@@ -292,7 +332,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.9.5"
+      "version": "3.10.2"
     },
     "nteract": {
       "version": "nteract-front-end@1.0.0"
