--- a/Módulo 8 - Administrar datos con diccionarios/Módulo8Katas.ipynb
+++ b/Módulo 8 - Administrar datos con diccionarios/Módulo8Katas.ipynb
@@ -40,11 +40,15 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 8,
       "metadata": {},
       "outputs": [],
       "source": [
-        "# Crea un diccionario llamado planet con los datos propuestos"
+        "# Crea un diccionario llamado planet con los datos propuestos\n",
+        "planet = {\n",
+        "    \"name\": \"Mars\",\n",
+        "    \"moons\": 2\n",
+        "}"
       ]
     },
     {
@@ -56,11 +60,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 9,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "El planeta Mars tiene 2 lunas.\n"
+          ]
+        }
+      ],
       "source": [
-        "# Muestra el nombre del planeta y el número de lunas que tiene."
+        "# Muestra el nombre del planeta y el número de lunas que tiene.\n",
+        "print(f\"\"\"El planeta {planet[\"name\"]} tiene {planet[\"moons\"]} lunas.\"\"\")"
       ]
     },
     {
@@ -84,11 +97,15 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 10,
       "metadata": {},
       "outputs": [],
       "source": [
-        "# Agrega la clave circunferencia con los datos proporcionados previamente"
+        "# Agrega la clave circunferencia con los datos proporcionados previamente\n",
+        "planet[\"circunferencia (km)\"] = {\n",
+        "    \"polar\": 6752,\n",
+        "    \"equatorial\": 6792\n",
+        "}"
       ]
     },
     {
@@ -100,11 +117,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 11,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "El planeta Mars tiene una circunferencia polar de 6752 km.\n"
+          ]
+        }
+      ],
       "source": [
-        "# Imprime el nombre del planeta con su circunferencia polar."
+        "# Imprime el nombre del planeta con su circunferencia polar.\n",
+        "print(f\"\"\"El planeta {planet[\"name\"]} tiene una circunferencia polar de {planet[\"circunferencia (km)\"][\"polar\"]} km.\"\"\")"
       ]
     },
     {
@@ -131,7 +157,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 16,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -164,11 +190,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 18,
       "metadata": {},
       "outputs": [],
       "source": [
-        "# Añade el código para determinar el número de lunas."
+        "# Añade el código para determinar el número de lunas.\n",
+        "moons = planet_moons.values()\n",
+        "planets = len(planet_moons)"
       ]
     },
     {
@@ -180,11 +208,21 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 20,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "El promedio de lunas por planeta es de 17.833333333333332\n"
+          ]
+        }
+      ],
       "source": [
-        "# Agrega el código para contar el número de lunas. "
+        "# Agrega el código para contar el número de lunas. \n",
+        "acum_moons = sum(moons)\n",
+        "print(f\"El promedio de lunas por planeta es de {acum_moons/planets}\")"
       ]
     },
     {
@@ -203,7 +241,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 12,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -217,9 +255,17 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 13,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Mars has 2 moons\n"
+          ]
+        }
+      ],
       "source": [
         "# Muestra el nombre del planeta y el número de lunas que tiene.\n",
         "\n",
@@ -228,7 +274,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 14,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -242,9 +288,17 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 15,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Mars has a polar circumference of 6752\n"
+          ]
+        }
+      ],
       "source": [
         "# Imprime el nombre del planeta con su circunferencia polar.\n",
         "\n",
@@ -260,7 +314,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 21,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -277,9 +331,17 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 22,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "17.833333333333332\n"
+          ]
+        }
+      ],
       "source": [
         "# Calcula el total_moons agregando todas las lunas\n",
         "# Almacena su valor en una variable llamada total_moons\n",
@@ -330,7 +392,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.9.5"
+      "version": "3.10.2"
     },
     "nteract": {
       "version": "nteract-front-end@1.0.0"
