--- a/Módulo 9 - Funciones/Módulo9Katas.ipynb
+++ b/Módulo 9 - Funciones/Módulo9Katas.ipynb
@@ -272,7 +272,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -290,9 +290,22 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Fuel Report:\n",
+            "    Total Average: 78.33333333333333%\n",
+            "    Main tank: 80%\n",
+            "    External tank: 70%\n",
+            "    Hydrogen tank: 85% \n",
+            "    \n"
+          ]
+        }
+      ],
       "source": [
         "# Llamamos a la función que genera el reporte print(funcion(tanque1, tanque2, tanque3))\n",
         "print(generate_report(80, 70, 85))"
@@ -300,9 +313,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "82.0"
+            ]
+          },
+          "execution_count": 3,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "# Función promedio \n",
         "def average(values):\n",
@@ -316,19 +340,19 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 95,
+      "execution_count": 4,
       "metadata": {},
       "outputs": [
         {
-          "ename": "NameError",
-          "evalue": "name 'average' is not defined",
-          "output_type": "error",
-          "traceback": [
-            "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[1;32mc:\\Users\\luisi\\Documents\\Progra\\CursoIntroPython\\Módulo 9 - Funciones\\Módulo9Katas.ipynb Cell 24'\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/luisi/Documents/Progra/CursoIntroPython/M%C3%B3dulo%209%20-%20Funciones/M%C3%B3dulo9Katas.ipynb#ch0000023?line=2'>3</a>\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mf\u001b[39m\u001b[39m\"\"\"\u001b[39m\u001b[39mFuel Report:\u001b[39m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/luisi/Documents/Progra/CursoIntroPython/M%C3%B3dulo%209%20-%20Funciones/M%C3%B3dulo9Katas.ipynb#ch0000023?line=3'>4</a>\u001b[0m \u001b[39m    Total Average: \u001b[39m\u001b[39m{\u001b[39;00maverage([main_tank, external_tank, hydrogen_tank])\u001b[39m}\u001b[39;00m\u001b[39m%\u001b[39m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/luisi/Documents/Progra/CursoIntroPython/M%C3%B3dulo%209%20-%20Funciones/M%C3%B3dulo9Katas.ipynb#ch0000023?line=4'>5</a>\u001b[0m \u001b[39m    Main tank: \u001b[39m\u001b[39m{\u001b[39;00mmain_tank\u001b[39m}\u001b[39;00m\u001b[39m%\u001b[39m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/luisi/Documents/Progra/CursoIntroPython/M%C3%B3dulo%209%20-%20Funciones/M%C3%B3dulo9Katas.ipynb#ch0000023?line=5'>6</a>\u001b[0m \u001b[39m    External tank: \u001b[39m\u001b[39m{\u001b[39;00mexternal_tank\u001b[39m}\u001b[39;00m\u001b[39m%\u001b[39m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/luisi/Documents/Progra/CursoIntroPython/M%C3%B3dulo%209%20-%20Funciones/M%C3%B3dulo9Katas.ipynb#ch0000023?line=6'>7</a>\u001b[0m \u001b[39m    Hydrogen tank: \u001b[39m\u001b[39m{\u001b[39;00mhydrogen_tank\u001b[39m}\u001b[39;00m\u001b[39m% \u001b[39m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/luisi/Documents/Progra/CursoIntroPython/M%C3%B3dulo%209%20-%20Funciones/M%C3%B3dulo9Katas.ipynb#ch0000023?line=7'>8</a>\u001b[0m \u001b[39m    \u001b[39m\u001b[39m\"\"\"\u001b[39m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/luisi/Documents/Progra/CursoIntroPython/M%C3%B3dulo%209%20-%20Funciones/M%C3%B3dulo9Katas.ipynb#ch0000023?line=9'>10</a>\u001b[0m \u001b[39m# Call the updated function again with different values\u001b[39;00m\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/luisi/Documents/Progra/CursoIntroPython/M%C3%B3dulo%209%20-%20Funciones/M%C3%B3dulo9Katas.ipynb#ch0000023?line=10'>11</a>\u001b[0m \u001b[39mprint\u001b[39m(generate_report(\u001b[39m88\u001b[39;49m, \u001b[39m76\u001b[39;49m, \u001b[39m70\u001b[39;49m))\n",
-            "\u001b[1;32mc:\\Users\\luisi\\Documents\\Progra\\CursoIntroPython\\Módulo 9 - Funciones\\Módulo9Katas.ipynb Cell 24'\u001b[0m in \u001b[0;36mgenerate_report\u001b[1;34m(main_tank, external_tank, hydrogen_tank)\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/luisi/Documents/Progra/CursoIntroPython/M%C3%B3dulo%209%20-%20Funciones/M%C3%B3dulo9Katas.ipynb#ch0000023?line=1'>2</a>\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mgenerate_report\u001b[39m(main_tank, external_tank, hydrogen_tank):\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/luisi/Documents/Progra/CursoIntroPython/M%C3%B3dulo%209%20-%20Funciones/M%C3%B3dulo9Katas.ipynb#ch0000023?line=2'>3</a>\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mf\u001b[39m\u001b[39m\"\"\"\u001b[39m\u001b[39mFuel Report:\u001b[39m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/luisi/Documents/Progra/CursoIntroPython/M%C3%B3dulo%209%20-%20Funciones/M%C3%B3dulo9Katas.ipynb#ch0000023?line=3'>4</a>\u001b[0m \u001b[39m    Total Average: \u001b[39m\u001b[39m{\u001b[39;00maverage([main_tank, external_tank, hydrogen_tank])\u001b[39m}\u001b[39;00m\u001b[39m%\u001b[39m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/luisi/Documents/Progra/CursoIntroPython/M%C3%B3dulo%209%20-%20Funciones/M%C3%B3dulo9Katas.ipynb#ch0000023?line=4'>5</a>\u001b[0m \u001b[39m    Main tank: \u001b[39m\u001b[39m{\u001b[39;00mmain_tank\u001b[39m}\u001b[39;00m\u001b[39m%\u001b[39m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/luisi/Documents/Progra/CursoIntroPython/M%C3%B3dulo%209%20-%20Funciones/M%C3%B3dulo9Katas.ipynb#ch0000023?line=5'>6</a>\u001b[0m \u001b[39m    External tank: \u001b[39m\u001b[39m{\u001b[39;00mexternal_tank\u001b[39m}\u001b[39;00m\u001b[39m%\u001b[39m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/luisi/Documents/Progra/CursoIntroPython/M%C3%B3dulo%209%20-%20Funciones/M%C3%B3dulo9Katas.ipynb#ch0000023?line=6'>7</a>\u001b[0m \u001b[39m    Hydrogen tank: \u001b[39m\u001b[39m{\u001b[39;00mhydrogen_tank\u001b[39m}\u001b[39;00m\u001b[39m% \u001b[39m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/luisi/Documents/Progra/CursoIntroPython/M%C3%B3dulo%209%20-%20Funciones/M%C3%B3dulo9Katas.ipynb#ch0000023?line=7'>8</a>\u001b[0m \u001b[39m    \u001b[39m\u001b[39m\"\"\"\u001b[39m\n",
-            "\u001b[1;31mNameError\u001b[0m: name 'average' is not defined"
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Fuel Report:\n",
+            "    Total Average: 78.0%\n",
+            "    Main tank: 88%\n",
+            "    External tank: 76%\n",
+            "    Hydrogen tank: 70% \n",
+            "    \n"
           ]
         }
       ],
@@ -355,7 +379,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 51,
+      "execution_count": 5,
       "metadata": {},
       "outputs": [
         {
