correcion de error katas

--- a/Módulo 9 - Funciones/Módulo9Katas.ipynb
+++ b/Módulo 9 - Funciones/Módulo9Katas.ipynb
@@ -39,7 +39,8 @@
         "    return f\"\"\"El promedio de combustible es: {promedio}\n",
         "    Tanque 1: {tanque1}\n",
         "    Tanque 2: {tanque2}\n",
-        "    Tanque 3: {tanque3}\"\"\""
+        "    Tanque 3: {tanque3}\n",
+        "    \"\"\""
       ]
     },
     {
