--- a/Módulo 9 - Funciones/Módulo9Katas.ipynb
+++ b/Módulo 9 - Funciones/Módulo9Katas.ipynb
@@ -491,11 +491,9 @@
     }
   ],
   "metadata": {
-    "interpreter": {
-      "hash": "205095b8b86ea82a021a8fc2ffba2b3bc9f8d0be25999901963b225939f75778"
-    },
     "kernelspec": {
-      "display_name": "Python 3.8.10 64-bit ('tmp': conda)",
+      "display_name": "Python 3.10.5 64-bit",
+      "language": "python",
       "name": "python3"
     },
     "language_info": {
@@ -508,12 +506,17 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.10.2"
+      "version": "3.10.5"
     },
     "nteract": {
       "version": "nteract-front-end@1.0.0"
     },
-    "orig_nbformat": 4
+    "orig_nbformat": 4,
+    "vscode": {
+      "interpreter": {
+        "hash": "26de051ba29f2982a8de78e945f0abaf191376122a1563185a90213a26c5da77"
+      }
+    }
   },
   "nbformat": 4,
   "nbformat_minor": 2
